# CPP-Calculator

./: CMakeLists.txt  README.md  output.txt
src/: main.cpp
src/lib/calculator/: calculator.cpp  calculator.hpp
src/lib/kafka/: consumer.cpp  producer.cpp
tests/: calculator_test.cpp
